# devops-intern-app

./: README.md
.github/workflows/: CI.yaml
bash-app/: run.sh
bash-app/tests/: test_run.sh
java-app/: pom.xml
java-app/src/main/java/: HelloApp.java
java-app/src/test/java/: HelloAppTest.java
python-app/: Dockerfile  app.py  pyproject.toml
python-app/tests/: test_app.py
