[project]
name = "intern-docker-python"
version = "0.1.0"
description = "Simple Python app for Docker internship task"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
